# Health-Demo

./: DeisgnDoc.md  README.md
agent/: Dockerfile  README.md  livekit.toml  main.py  pyproject.toml
agent/data/: patient.json
agent/prompts/: calendar_assistant.txt  confidence.txt  education.txt  reminders.txt  scheduling.txt  verification.txt  welcome.txt  wrapup.txt
data/: availability.json  education.json  medications.json
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/api/token/: route.ts
frontend/app/components/: CalendarDashboard.tsx  ChatPanel.tsx  DialogflowBotIndicator.tsx  LexBotIndicator.tsx  LlmIndicator.tsx  MedicationsList.tsx  PatientDashboard.tsx  RemindersList.tsx  RoomConnection.tsx  WorkflowProgress.tsx  index.ts
