[project]
name = "health-agent"
version = "0.1.0"
description = "HealthAssist medication onboarding voice agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector,deepgram,openai,cartesia,google]~=1.3",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
]
